add method cuisine

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 RestaurantTP/.vs/
 RestaurantTP/obj/
 RestaurantTPTest/obj/
+RestaurantTPTest/obj/Debug/netcoreapp3.1/RestaurantTPTest.GeneratedMSBuildEditorConfig.editorconfig
+RestaurantTP/.vs/RestaurantTP/v16/.suo
+RestaurantTP/obj/Debug/netcoreapp3.1/RestaurantTP.GeneratedMSBuildEditorConfig.editorconfig
+RestaurantTPTest/obj/Debug/netcoreapp3.1/RestaurantTPTest.GeneratedMSBuildEditorConfig.editorconfig
