--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,19 @@ RestaurantTPTest/obj/Debug/netcoreapp3.1/RestaurantTPTest.GeneratedMSBuildEditor
 RestaurantTP/.vs/RestaurantTP/v16/.suo
 RestaurantTP/obj/Debug/netcoreapp3.1/RestaurantTP.GeneratedMSBuildEditorConfig.editorconfig
 RestaurantTPTest/obj/Debug/netcoreapp3.1/RestaurantTPTest.GeneratedMSBuildEditorConfig.editorconfig
+RestaurantTP/.vs/RestaurantTP/v16/.suo
+RestaurantTP/obj/Debug/netcoreapp3.1/RestaurantTP.assets.cache
+RestaurantTP/obj/Debug/netcoreapp3.1/RestaurantTP.GeneratedMSBuildEditorConfig.editorconfig
+RestaurantTP/obj/project.assets.json
+RestaurantTP/obj/project.nuget.cache
+RestaurantTP/obj/RestaurantTP.csproj.nuget.dgspec.json
+RestaurantTP/obj/RestaurantTP.csproj.nuget.g.props
+RestaurantTP/RestaurantTP.sln
+RestaurantTPTest/obj/Debug/netcoreapp3.1/RestaurantTPTest.assets.cache
+RestaurantTPTest/obj/Debug/netcoreapp3.1/RestaurantTPTest.csproj.AssemblyReference.cache
+RestaurantTPTest/obj/Debug/netcoreapp3.1/RestaurantTPTest.GeneratedMSBuildEditorConfig.editorconfig
+RestaurantTPTest/obj/project.assets.json
+RestaurantTPTest/obj/project.nuget.cache
+RestaurantTPTest/obj/RestaurantTPTest.csproj.nuget.dgspec.json
+RestaurantTPTest/obj/RestaurantTPTest.csproj.nuget.g.props
+RestaurantTPTest/obj/RestaurantTPTest.csproj.nuget.g.targets
